--- a/src/app/components/mi-carrito/mi-carrito.component.html
+++ b/src/app/components/mi-carrito/mi-carrito.component.html
@@ -1,6 +1,43 @@
-<div style="position: relative;">
-    <img src="https://camisetastheorigen.com/5465-large_default/camiseta-personalizada-hombre-color-naranja.jpg" width="400"  height="400"  />
-    <div style="position: absolute; top:0; left:0;">
-        <img  src="../assets/images/logo-Paypal.png" width="300" height="300" hspace="16" vspace="16" />
+<div class="container p-1 " style="display:inline-block">
+    <div *ngIf=!noHayProductos style="height:  5rem;">
+        <h2>Mi carrito</h2> 
+    </div>
+    <div *ngIf=noHayProductos style="height:  24rem;">
+        <h1><strong>NO</strong> se ha encontrado ningún producto ...</h1> 
+    </div>
+    <div>
+        <ul class="row" style="margin: 1%;width: 50%; float:left">
+            <li  *ngFor="let product of newProducts" class="list-group-item p-2">
+                <div class="card" style="width: 50%;float:left"> <!-- // height: 35rem; -->
+                    <div style="position: relative; width: 40%;">
+                        <img src={{product.image}} class="card-img-top"  height="100" width="100"  />
+                        <div style="position: absolute; top:0rem; left:6rem;">
+                            <img  src='{{product.design.image}}'  width="80" height="80"  />
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
+                        <p class="card-text"><strong>{{product.price}}€</strong></p>
+                    </div>
+                    <a  style="position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    z-index: 1;" href="/#/product/{{product._id}}"></a>
+                </div>
+                <div style="width: 50%;float:right">
+                    <button class="btn btn-lg btn-outline-dark" >Eliminar</button>
+                </div>
+            </li>
+        </ul>
+        <div style="float: right;width: 40%;margin: 1%;">
+            <div style="padding-right: 30px;">
+                <button class="btn btn-lg btn-outline-dark" >Comprar</button>
+            </div>
+            <div style="padding-right: 30px;">
+                <button class="btn btn-lg btn-outline-dark" >Vaciar Carrito</button>
+            </div>
+        </div>
     </div>
 </div>
